variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: Missing closing brace `}' assumed here
var nbbiscuit=0
^